# rustyfilters

./: .Rbuildignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: blocks.R  convolve.R  data.R  edge_preserving.R  engine.R  extendr-wrappers.R  focal.R  gdalraster.R  plot.R  rustyfilters-package.R  smooth.R  speckle.R  terra.R  threads.R  utils.R  zzz.R
benchmarks/: bench_filters.R  bench_threads.R
data/: s1_sthelens.rda
data-raw/: s1_sthelens.R
docs/: 404.html  LICENSE.html  authors.html  authors.md  index.html  index.md  pkgdown.yml  search.json  sitemap.xml
man/: rf_bilateral.Rd  rf_convolve.Rd  rf_enhanced_lee.Rd  rf_focal.Rd  rf_frost.Rd  rf_gamma_map.Rd  rf_gaussian.Rd  rf_guided.Rd  rf_kuan.Rd  rf_laplacian.Rd  rf_lee.Rd  rf_lee_sigma.Rd  rf_lee_sigma_improved.Rd  rf_mean.Rd  rf_median.Rd  rf_params.Rd  rf_plot.Rd  rf_sobel.Rd  rf_threads.Rd  rustyfilters-package.Rd  s1_sthelens.Rd
news/: index.html  index.md
reference/: index.html  index.md  rf_bilateral.html  rf_bilateral.md  rf_convolve.html  rf_convolve.md  rf_enhanced_lee.html  rf_enhanced_lee.matrix.html  rf_enhanced_lee.md  rf_focal.html  rf_focal.md  rf_frost.array.html  rf_frost.html  rf_frost.md  rf_gamma_map.html  rf_gamma_map.md  rf_gaussian.SpatRaster.html  rf_gaussian.md  (+31 more)
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: bilateral.rs  convolve.rs  engine.rs  focal.rs  gaussian.rs  guided.rs  lib.rs  speckle.rs  threading.rs
(+64 files in other folders)
