[package]
name = 'rustyfilters'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.80'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'rustyfilters'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
rayon = '1.11'

[profile.release]
lto = true
codegen-units = 1
